--- a/Drones-rocketry-club/html/gallery.html
+++ b/Drones-rocketry-club/html/gallery.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Homepage| intro</title>
-        <link rel="stylesheet" type="text/css" href="../css/style.css">
+        <link rel="stylesheet" type="text/css" href="../css/styleThree.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -48,18 +48,7 @@
       </div>
 </nav>
 
-<h1 class="main_title">The Drones and rocketry club</h1>
+<h1 class="main_title">Gallery</h1>
 <div class="line"></div>
-<section class="strip">
-<h1 class="title">Follow us!</h1>
-<a class="ifonts" href="https://www.instagram.com/drone_and_rocketry_club/" target="_blank"><i class="fab fa-instagram"></i></a>
-<a class="ifonts" href="https://www.remind.com/join/dronesa" target="_blank"><i class="fas fa-brain"></i></a>
-<a class="ifonts" href="https://discord.gg/Ma7CBdt" target="_blank"><i class="fab fa-discord"></i></a>
-<a class="ifonts" href="https://www.instructables.com/member/cal%20high%20drones%20and%20rocketry%20club/instructables/" target="_blank"><i class="fas fa-chalkboard"></i></a>
-<a class="ifonts" href="https://github.com/cal-high-dronesandrocketry" target="_blank"><i class="fab fa-github"></i></a>
-</section>
-
-<a href="news.html"><i class="fas fa-angle-down"></i></a>
-      </section>
     </body>
 </html>
